- update dependencies